[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]

[project]
name = "pydartz"
description = "command line assistant and library for playing darts"
readme = "README.md"
keywords = [
  "commandline darts",
]
license = {text = "GPLv3"}
authors = [{ name = "Philipp Metzner", email = "beth.aleph@yahoo.de" }]
dynamic = [
  "version",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Other Audience",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Games/Entertainment",
  "Topic :: Software Development :: Libraries :: Python Modules",
 ]
[project.optional-dependencies]
audio = [
  "simpleaudio==1.0.4",
]
develop = [
  "black==23.7.0",
  "coverage==7.3.0",
  "flake8-pyproject==1.2.3",
  "isort==5.12.0",
  "pre-commit==3.4.0",
]
packaging = [
  "build",
  "twine>=1.11",
]

[project.urls]
"Bug Tracker" = "https://github.com/pylipp/pydartz/issues"
Documentation = "https://github.com/pylipp/pydartz"
Homepage = "https://github.com/pylipp/pydartz"
"Source Code" = "https://github.com/pylipp/pydartz"

[project.scripts]
pydartz = "pydartz.cli:main"


[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["test"]
namespaces = false

[tool.setuptools.data-files]
data = ["data/chase_the_sun.wav"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = "88"
per-file-ignores = "pydartz/cli.py: E501"

[tool.coverage.run]
branch = true
source = ["pydartz"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "except Exception:",
  "def .*main()",
]

[tool.setuptools_scm]
