[metadata]
name = pydartz
description = command line assistant and library for playing darts
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/pylipp/pydartz
author = Philipp Metzner
author_email = beth.aleph@yahoo.de
license = GPLv3
keywords = commandline darts
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Unix
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    importlib-metadata>=1.7.0;python_version<"3.8"

[options.data_files]
data =
    data/chase_the_sun.wav

[options.packages.find]
exclude = test

[options.entry_points]
console_scripts =
    pydartz = pydartz.cli:main

[options.extras_require]
audio =
    simpleaudio==1.0.4
packaging =
    build
    twine>=1.11.0
develop =
    coverage==7.0.1
    flake8==5.0.4
    black==22.12.0

[coverage:run]
branch = true
source = pydartz

[flake8]
max-line-length = 88
